--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
 
   <body>
     <!-- header design -->
+    <div class="header">
+      <div class="navbar">
+        <div class="logo">
+          <img src="./images/logo.svg" alt="logo" class="vector">
+          <div class="name">Manu Ribeiro</div>
+        </div>
+        <div class="navlink">
+          <a class="nav-item" href="#home">Home</a>
+          <a class="nav-item" href="#about">Sobre mim</a>
+          <a class="nav-item" href="#services">Projetos</a>
+          <a class="nav-item" href="#portfolio">Contato</a>
+        </div>
+      </div>    
+    </div>  
 
     <!-- home section design -->
 
