adding profile pic + gloss effect

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 
     <!-- custom css -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
@@ -18,8 +18,8 @@
     <div class="header">
       <div class="navbar">
         <div class="logo">
-          <img src="./images/logo.svg" alt="logo" class="vector">
-          <div class="name">Manu Ribeiro</div>
+          <img src="./../images/logo.svg" alt="logo" class="vector">
+          <div class="title">Manu Ribeiro</div>
         </div>
         <div class="navlink">
           <a class="nav-item" href="#home">Home</a>
@@ -31,6 +31,23 @@
     </div>  
 
     <!-- home section design -->
+  <div class="container">
+    <section class="cover">
+      <div class="profile-img">
+        <div class="background-image">
+        <img src="./../images/home.png" alt="photo" class="pic">
+      </div>
+      </div>
+      <section class="intro">
+        <div class="intro-text">
+
+
+        </div>
+      </section>
+    </section>
+  </div>
+
+
 
     <!-- about section design -->
 
