Adjusting project cards and renaming classes

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8" />
@@ -202,157 +202,75 @@
     <h2 class="table-title">
       Contribuições Github
     </h2>
-    <a href="https://github.com/anamanuellar/" alt="Painel de contribruições GitHub" class="github-link">
+    <a href="https://github.com/anamanuellar/" title="Painel de contribruições GitHub" class="github-link">
       <table id="contribution-table"></table>
     </a>
   </div>
   <!-- portfolio section design -->
-
-
-  <div class="box">
-  <div class="box-container">
-  <div class="heading">
-    <h2 class="project-title" id="project">Projetos</h2>
+  <div class="card-group">
+    <div class="card-group-title"></div>
+  <div class="card-deck">
+  <div class="card">
+    <img class="card-img-top" src="./../images/portfolio1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    </div>
+    <div class="card-footer">
+      <p class="card-tag">Last updated 3 mins ago</p>
+    </div>
   </div>
-  <div class="stack-project">
-    <div class="list-project">
-      <div class="project">
-        <div class="project-image">
-          <img src="./../images/portfolio1.jpg" alt="ODS 13" class="screen">
-        </div>
-        <div class="project-detail">
-          <div class="label">
-            <div class="ods-heading">ODS website</div>
-          </div>
-          <div class="description">
-            <p>lore ipsum sajasfabssb</p>
-          </div>
-          <div class="tags">
-            <div class="wrapper">HTML</div>
-            <div class="wrapper">CSS</div>
-          </div>
-          <div class="project-button">
-            <a href="" class="link-wrapper"></a>
-            svg-button
-          </div>
-        </div>
-      </div>
+  <div class="card">
+    <img class="card-img-top" src="./../images/portfolio2.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
     </div>
-    <div class="list-project">
-      <div class="project">
-        <div class="project-image">
-          <img src="" alt="" class="screen">
-        </div>
-        <div class="project-detail">
-          <div class="label">Projeto 02</div>
-          <div class="description">
-            <p>lore ipsum sajasfabssb</p>
-          </div>
-          <div class="tags">
-            <div class="wrapper"></div>
-            <div class="wrapper"></div>
-            <div class="wrapper"></div>
-          </div>
-          <div class="project-button">
-            <a href="" class="link-wrapper"></a>
-            svg-button
-          </div>
-        </div>
-      </div>
+    <div class="card-footer">
+      <p class="card-tag">Last updated 3 mins ago</p>
     </div>
-    <div class="list-project">
-      <div class="project">
-        <div class="project-image">
-          <img src="" alt="" class="screen">
-        </div>
-        <div class="project-detail">
-          <div class="label">Projeto 03</div>
-          <div class="description">
-            <p>lore ipsum sajasfabssb</p>
-          </div>
-          <div class="tags">
-            <div class="wrapper"></div>
-            <div class="wrapper"></div>
-            <div class="wrapper"></div>
-          </div>
-          <div class="project-button">
-            <a href="" class="link-wrapper"></a>
-            svg-button
-          </div>
-        </div>
-      </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="./../images/portfolio3.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
     </div>
-    <div class="list-project">
-      <div class="project">
-        <div class="project-image">
-          <img src="" alt="" class="screen">
-        </div>
-        <div class="project-detail">
-          <div class="label">Projeto 04</div>
-          <div class="description">
-            <p>lore ipsum sajasfabssb</p>
-          </div>
-          <div class="tags">
-            <div class="wrapper"></div>
-            <div class="wrapper"></div>
-            <div class="wrapper"></div>
-          </div>
-          <div class="project-button">
-            <a href="" class="link-wrapper"></a>
-            svg-button
-          </div>
-        </div>
-      </div>
+    <div class="card-footer">
+      <p class="card-tag">Last updated 3 mins ago</p>
     </div>
-    <div class="list-project">
-      <div class="project">
-        <div class="project-image">
-          <img src="" alt="" class="screen">
-        </div>
-        <div class="project-detail">
-          <div class="label">Projeto 05</div>
-          <div class="description">
-            <p>lore ipsum sajasfabssb</p>
-          </div>
-          <div class="tags">
-            <div class="wrapper"></div>
-            <div class="wrapper"></div>
-            <div class="wrapper"></div>
-          </div>
-          <div class="project-button">
-            <a href="" class="link-wrapper"></a>
-            svg-button
-          </div>
-        </div>
-      </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="./../images/portfolio4.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
     </div>
-
-    <div class="list-project">
-      <div class="project">
-        <div class="project-image">
-          <img src="" alt="" class="screen">
-        </div>
-        <div class="project-detail">
-          <div class="label">Projeto 06</div>
-          <div class="description">
-            <p>lore ipsum sajasfabssb</p>
-          </div>
-          <div class="tags">
-            <div class="wrapper"></div>
-            <div class="wrapper"></div>
-            <div class="wrapper"></div>
-          </div>
-          <div class="project-button">
-            <a href="" class="link-wrapper"></a>
-            svg-button
-          </div>
-        </div>
-      </div>
+    <div class="card-footer">
+      <p class="card-tag">Last updated 3 mins ago</p>
     </div>
-
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="./../images/portfolio5.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+    </div>
+    <div class="card-footer">
+      <p class="card-tag">Last updated 3 mins ago</p>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="./../images/portfolio6.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+    </div>
+    <div class="card-footer">
+      <p class="card-tag">Last updated 3 mins ago</p>
+    </div>
   </div>
 </div>
-
 </div>
 
   <!-- contact section design -->
