Adding tags and project link

--- a/src/index.html
+++ b/src/index.html
@@ -208,7 +208,7 @@
   </div>
   <!-- portfolio section design -->
   <div class="card-group">
-    <div class="card-group-title"></div>
+    <div class="card-group-title">Projetos</div>
   <div class="card-deck">
   <div class="card">
     <img class="card-img-top" src="./../images/portfolio1.jpg" alt="Card image cap">
@@ -217,8 +217,12 @@
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
     </div>
     <div class="card-footer">
-      <p class="card-tag">Last updated 3 mins ago</p>
+      <span class="card-tag">HTML</span>
+      <span class="card-tag">CSS</span>
+      <span class="card-tag">React</span>
     </div>
+      <a href="" class="card-link">Veja o projeto >></a>
+    
   </div>
   <div class="card">
     <img class="card-img-top" src="./../images/portfolio2.jpg" alt="Card image cap">
