Removing gap between cards and fixing some bugs

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Portfolio</title>
-  
+
   <!-- custom css -->
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="./css/particles.css">
@@ -198,8 +198,8 @@
       </div>
     </div>
   </div>
-  </div>
-  <div class="divider"></div>
+ 
+ 
   <div class="github-container">
     <h2 class="table-title">
       Contribuições Github
@@ -211,101 +211,106 @@
   <!-- portfolio section design -->
   <div class="card-group">
     <div class="card-group-title">Projetos</div>
-  <div class="card-deck">
-  <div class="card">
-    <img class="card-img-top" src="./../images/portfolio1.jpg" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <div class="card-deck">
+      <div class="card">
+        <img class="card-img-top" src="./../images/portfolio1.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+            content. This content is a little bit longer.</p>
+        </div>
+        <div class="card-footer">
+          <span class="card-tag">HTML</span>
+          <span class="card-tag">CSS</span>
+          <span class="card-tag">React</span>
+        </div>
+        <a href="" class="card-link">Veja o projeto >></a>
+
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="./../images/portfolio2.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        </div>
+        <div class="card-footer">
+          <p class="card-tag">Last updated 3 mins ago</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="./../images/portfolio3.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+            content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+        <div class="card-footer">
+          <p class="card-tag">Last updated 3 mins ago</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="./../images/portfolio4.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+            content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+        <div class="card-footer">
+          <p class="card-tag">Last updated 3 mins ago</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="./../images/portfolio5.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+            content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+        <div class="card-footer">
+          <p class="card-tag">Last updated 3 mins ago</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="./../images/portfolio6.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+            content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+        <div class="card-footer">
+          <p class="card-tag">Last updated 3 mins ago</p>
+        </div>
+      </div>
     </div>
-    <div class="card-footer">
-      <span class="card-tag">HTML</span>
-      <span class="card-tag">CSS</span>
-      <span class="card-tag">React</span>
-    </div>
-      <a href="" class="card-link">Veja o projeto >></a>
-    
   </div>
-  <div class="card">
-    <img class="card-img-top" src="./../images/portfolio2.jpg" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-    </div>
-    <div class="card-footer">
-      <p class="card-tag">Last updated 3 mins ago</p>
-    </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top" src="./../images/portfolio3.jpg" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-    </div>
-    <div class="card-footer">
-      <p class="card-tag">Last updated 3 mins ago</p>
-    </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top" src="./../images/portfolio4.jpg" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-    </div>
-    <div class="card-footer">
-      <p class="card-tag">Last updated 3 mins ago</p>
-    </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top" src="./../images/portfolio5.jpg" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-    </div>
-    <div class="card-footer">
-      <p class="card-tag">Last updated 3 mins ago</p>
-    </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top" src="./../images/portfolio6.jpg" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-    </div>
-    <div class="card-footer">
-      <p class="card-tag">Last updated 3 mins ago</p>
-    </div>
-  </div>
-</div>
-</div>
 
   <!-- contact section design -->
- 
+
   <section class="contact-section" id="contact">
-    
-<div class="social-media">
-  <h2 class="contact-title">Entre em contato</h2>
-    <ul class="social-icons">
-      <li><a href="https://wa.me/5571982593895"><i class="fa-brands fa-whatsapp"></i></a></li>
-      <li><a href="https://www.linkedin.com/in/manu-ribeiro-dev/"><i class="fa-brands fa-github"></i></a></li>
-      <li><a href="https://www.instagram.com/rsmanu30/"><i class="fa-brands fa-instagram"></i></a></li>
-      <li><a href="mailto:ribeiro.anamanuella@gmail.com"><i class="fa-regular fa-envelope"></i></a></li>
-    </ul>
-  </div>
-<form>      
-  <input name="name" type="text" class="contact-form" placeholder="Nome" />   
-  <input name="email" type="text" class="contact-form" placeholder="Email" />
-  <textarea name="text" class="contact-form" placeholder="Mensagem"></textarea>
-  <input type="submit" value="Enviar"/>
-</form>
-</section>
+    <div class="social-media">
+      <h2 class="contact-title">Entre em contato</h2>
+      <ul class="social-icons">
+        <li><a href="https://wa.me/5571982593895"><i class="fa-brands fa-whatsapp"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/manu-ribeiro-dev/"><i class="fa-brands fa-github"></i></a></li>
+        <li><a href="https://www.instagram.com/rsmanu30/"><i class="fa-brands fa-instagram"></i></a></li>
+        <li><a href="mailto:ribeiro.anamanuella@gmail.com"><i class="fa-regular fa-envelope"></i></a></li>
+      </ul>
+    </div>
+    <form>
+      <input required name="name" type="text" class="contact-form" placeholder="Nome" />
+      <input required name="email" type="email" class="contact-form" placeholder="Email" />
+      <textarea required name="text" class="contact-form" placeholder="Mensagem"></textarea>
+      <input type="submit" value="Enviar" />
+    </form>
+  </section>
 
   <!-- footer design -->
   <footer>
     <div class="footer-content">
-        <span>Todos os direitos reservados &copy; 2023</span>
+      <span>Todos os direitos reservados &copy; 2023</span>
+
     </div>
-</footer>
+  </footer>
 
 
 
