--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,8 @@
       <div class="nav-link" id="myTopnav">
         <a class="nav-menu" href="#home">Home</a>
         <a class="nav-menu" href="#about">Sobre mim</a>
-        <a class="nav-menu" href="#services">Projetos</a>
-        <a class="nav-menu" href="#portfolio">Contato</a>
+        <a class="nav-menu" href="#portfolio">Projetos</a>
+        <a class="nav-menu" href="#contact">Contato</a>
       </div>
     </div>
   </div>
@@ -209,7 +209,7 @@
     </a>
   </div>
   <!-- portfolio section design -->
-  <div class="card-group">
+  <div class="card-group" id="portfolio">
     <div class="card-group-title">Projetos</div>
     <div class="card-deck">
       <div class="card">
