--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+  <header>
   <!-- header design -->
   <nav>
     <div class="logo">
@@ -29,10 +30,10 @@
       <i class="fa fa-bars fa-2x" onclick="menuShow()"></i>
     </div>
     <ul>
-      <li> <a href="#" class="active"> Início </a> </li>
-      <li> <a href="#"> Sobre</a> </li>
-      <li> <a href="#"> Projetos</a> </li>
-      <li> <a href="#"> Contato</a> </li>
+      <li> <a href="#home" class="active"> Início </a> </li>
+      <li> <a href="#about"> Sobre</a> </li>
+      <li> <a href="#portfolio"> Portfolio</a> </li>
+      <li> <a href="#contact"> Contato</a> </li>
     </ul>
   </nav>
   <!-- particles.js container -->
@@ -64,6 +65,8 @@
     <span class="js-count-particles"></span>
   </div>
   <div class="divider"></div>
+</header>
+  <main>
   <!-- about section design -->
   <div class="box" id="about">
     <div class="box-container">
@@ -304,7 +307,7 @@
       <input type="submit" value="Enviar" />
     </form>
   </section>
-
+</main>
   <!-- footer design -->
   <footer>
     <div class="footer-content">
