--- a/src/index.html
+++ b/src/index.html
@@ -228,8 +228,10 @@
           <span class="card-tag">CSS</span>
           <span class="card-tag">React</span>
         </div>
-        <a href="" class="card-link">Veja o projeto >></a>
-
+        <div class="btn-group">
+        <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar')" value="Github">
+        <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar')" value="Demo">
+      </div>
       </div>
       <div class="card">
         <img class="card-img-top" src="./../images/portfolio2.jpg" alt="Card image cap">
@@ -239,6 +241,10 @@
         </div>
         <div class="card-footer">
           <p class="card-tag">Last updated 3 mins ago</p>
+        </div>
+        <div class="btn-group">
+          <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar')" value="Github">
+          <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar')" value="Demo">
         </div>
       </div>
       <div class="card">
@@ -251,6 +257,10 @@
         <div class="card-footer">
           <p class="card-tag">Last updated 3 mins ago</p>
         </div>
+        <div class="btn-group">
+          <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar')" value="Github">
+          <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar')" value="Demo">
+        </div>
       </div>
       <div class="card">
         <img class="card-img-top" src="./../images/portfolio4.jpg" alt="Card image cap">
@@ -261,6 +271,10 @@
         </div>
         <div class="card-footer">
           <p class="card-tag">Last updated 3 mins ago</p>
+        </div>
+        <div class="btn-group">
+          <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar')" value="Github">
+          <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar')" value="Demo">
         </div>
       </div>
       <div class="card">
@@ -273,6 +287,10 @@
         <div class="card-footer">
           <p class="card-tag">Last updated 3 mins ago</p>
         </div>
+        <div class="btn-group">
+          <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar')" value="Github">
+          <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar')" value="Demo">
+        </div>
       </div>
       <div class="card">
         <img class="card-img-top" src="./../images/portfolio6.jpg" alt="Card image cap">
@@ -283,6 +301,10 @@
         </div>
         <div class="card-footer">
           <p class="card-tag">Last updated 3 mins ago</p>
+        </div>
+        <div class="btn-group">
+          <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar')" value="Github">
+          <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar')" value="Demo">
         </div>
       </div>
     </div>
