--- a/src/index.html
+++ b/src/index.html
@@ -217,34 +217,34 @@
     <div class="card-group-title">Projetos</div>
     <div class="card-deck">
       <div class="card">
-        <img class="card-img-top" src="./../images/portfolio1.jpg" alt="Card image cap">
+        <img class="card-img-top" src="./../images/portfolio1.jpg" alt="HoobBank">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-            content. This content is a little bit longer.</p>
+          <h5 class="card-title">HoobBank</h5>
+          <p class="card-text">O Projeto HoobBank é uma landing page totalmente responsiva que apresenta um banco fictício. Este site foi desenvolvido utilizando uma interface UX/UI moderna em React JS com Tailwind.</p>
+        </div>
+        <div class="card-footer">
+          <span class="card-tag">React</span>
+          <span class="card-tag">Tailwind</span>
+        </div>
+        <div class="btn-group">
+        <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar/HoobBankproject')" value="Github">
+        <input type="button" class="card-button" target="blank" onclick="window.open('https://anamanuellar.github.io/HoobBankproject/')" value="Demo">
+      </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="./../images/portfolio2.jpg" alt="Jogo da velha">
+        <div class="card-body">
+          <h5 class="card-title">Jogo da Velha</h5>
+          <p class="card-text">Este é um projeto de um jogo da velha simples criado com HTML, CSS e JavaScript. Design simples e intuitivo com alternância de jogador após cada jogada e detecção de vitória ou empate.</p>
         </div>
         <div class="card-footer">
           <span class="card-tag">HTML</span>
           <span class="card-tag">CSS</span>
-          <span class="card-tag">React</span>
+          <span class="card-tag">JavaScript</span>
         </div>
         <div class="btn-group">
-        <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar')" value="Github">
-        <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar')" value="Demo">
-      </div>
-      </div>
-      <div class="card">
-        <img class="card-img-top" src="./../images/portfolio2.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        </div>
-        <div class="card-footer">
-          <p class="card-tag">Last updated 3 mins ago</p>
-        </div>
-        <div class="btn-group">
-          <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar')" value="Github">
-          <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar')" value="Demo">
+          <input type="button" class="card-button" target="blank" onclick="window.open('https://github.com/anamanuellar/Tic-tac-toe')" value="Github">
+          <input type="button" class="card-button" target="blank" onclick="window.open('https://anamanuellar.github.io/Tic-tac-toe/')" value="Demo">
         </div>
       </div>
       <div class="card">
