Fixing bio position

--- a/src/index.html
+++ b/src/index.html
@@ -212,7 +212,7 @@
 
     <div class="github-container">
       <h2 class="table-title">
-        Contribuições Github
+        Contribuições no Github
       </h2>
       <a href="https://github.com/anamanuellar/" title="Painel de contribruições GitHub" class="github-link">
         <table id="contribution-table"></table>
