editing bio button

--- a/src/index.html
+++ b/src/index.html
@@ -73,24 +73,37 @@
         <div class="heading">
           <h2 class="about-title">Sobre mim</h2>
           <p class="about-text"></p>
-          <p class="about-text">&#128105; Olá, sou a Manu - uma desenvolvedora full-stack em formação e ex-profissional de gestão operacional.
+          <p class="about-text">&#128105; Olá, sou a Manu - uma desenvolvedora full-stack em formação e ex-profissional
+            de gestão operacional.
           </p>
-          <p class="about-text">&#127978; Com uma pós-graduação em Administração e 9 anos de experiência em uma grande empresa de hotelaria,
+          <p class="about-text">&#127978; Com uma pós-graduação em Administração e 10 anos de experiência em uma grande
+            empresa de hotelaria,
             domino liderança, planejamento, análise financeira e atendimento ao cliente.</p>
-          <p class="about-text">&#128188; Minha paixão por proporcionar experiências excepcionais me levou a uma transição de carreira ainda em andamento para o
+          <p class="about-text">&#128188; Minha paixão por proporcionar experiências excepcionais me levou a uma
+            transição de carreira ainda em andamento para o
             desenvolvimento web e de software.</p>
-          <p class="about-text">&#128640; Atualmente, estou mergulhando em tecnologias como Node.js, JavaScript, Typescript, Python, HTML5, CSS3,
+          <p class="about-text">&#128640; Atualmente, estou mergulhando em tecnologias como Node.js, JavaScript,
+            Typescript, Python, HTML5, CSS3,
             React Native, ReactJS, Bootstrap, Tailwind CSS, MySQL, Git, Figma e Trello.</p>
-          <p class="about-text">&#127775; Minha experiência anterior junto com minhas habilidades técnicas me permite desenvolver projetos de forma
-            eficaz e colaborativa - tanto individualmente quanto em equipe.</p>
-          <p class="about-text">&#127891; Além disso, estou participando do programa de formação Elas na Tech, resultado da parceria da JA
+          <p class="about-text">&#127891; Além disso, estou participando do programa de formação Elas na Tech, resultado
+            da parceria da JA
             Brasil com o Grupo CCR, que oferece exclusivamente para mulheres uma formação completa em programação web.
           </p>
-          <p class="about-text">&#129309; Estou à procura de uma oportunidade para me aprimorar ainda mais nesta área empolgante e contribuir para
+          <p class="about-text">&#127775; Minha experiência anterior junto com minhas habilidades técnicas me permite
+            desenvolver projetos de forma
+            eficaz e colaborativa - tanto individualmente quanto em equipe.</p>
+          <p class="about-text">&#129309; Estou à procura de uma oportunidade para me aprimorar ainda mais nesta área
+            empolgante e contribuir para
             o sucesso da empresa que me acolher.</p>
         </div>
-        <button class="card-button"><i class="fa-regular fa-file-pdf"></i> Download CV</button>
-        <button class="card-button"><i class="fa-brands fa-linkedin"></i> LinkedIn</button>
+        <div class="btn-group">
+          <a class="card-button" href="URL_DO_SEU_ARQUIVO_PDF" download>
+            <i class="fa-regular fa-file-pdf"></i> Download CV
+          </a>
+          <a class="card-button" href="https://www.linkedin.com/in/manu-ribeiro-dev/" target="_blank">
+            <i class="fa-brands fa-linkedin"></i> LinkedIn
+          </a>
+        </div>
       </div>
       <div class="box-container">
         <div class="heading">
